Fixed hidden cards enabling horizontal scrolling

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -159,6 +159,7 @@ ul, ol {
   width: 100%;
   max-width: var(--max-width);
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 .__indent-text {
